--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -15,7 +15,7 @@
   align-items: center;
   /* justify-content: space-between; */
 
-  padding: 10px 16px;
+  padding: 10px 26px;
 }
 
 /* ============================= */
@@ -25,6 +25,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  padding-left: 20px;
 }
 
 .nav-avatar {
@@ -39,7 +40,7 @@
   font-size: 18px;
   font-weight: 600;
   white-space: nowrap;
-  color: #fff;
+  color: #00e5ff;
 }
 
 /* ============================= */
@@ -49,7 +50,8 @@
   list-style: none;
   display: flex;
   gap: 22px;
-  padding: 0;
+  padding: 10px;
+  padding-right: 50px;
   margin: 0;
 }
 
@@ -64,7 +66,7 @@
   gap: 6px;
   text-decoration: none;
   color: #fff;
-  font-size: 15px;
+  font-size: 16px;
   position: relative;
 }
 
